--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,26 @@
+:root {
+    --blanco: #ffffff;
+    --oscuro: #212121;
+    --primario: #ffc107;
+}
 html {
     font-size: 62.5%
 }
 body {
     font-size: 16px; /* 1rem = 10px */
 }
-h1 {
+.titulo {
     text-align: center;
     font-size: 3.8rem;
 }
-h1 span {
+h1.titulo span {
     font-size: 2rem;
+    color: blue;
+}
+.titulo span {
+    font-size: 2rem;
+    color: red;
+}
+span {
+    color: green;
 }
