--- a/css/styles.css
+++ b/css/styles.css
@@ -2,25 +2,27 @@
     --blanco: #ffffff;
     --oscuro: #212121;
     --primario: #ffc107;
+    --secundario: #0097a7;
+    --gris: #757575;
 }
 html {
     font-size: 62.5%
 }
 body {
     font-size: 16px; /* 1rem = 10px */
+    font-family: 'Krub', sans-serif;
 }
 .titulo {
     text-align: center;
     font-size: 3.8rem;
-}
-h1.titulo span {
-    font-size: 2rem;
-    color: blue;
-}
+}  
 .titulo span {
     font-size: 2rem;
-    color: red;
 }
-span {
-    color: green;
+.contenedor {
+    width: 120rem;
+    margin: 0 auto;
+}
+.navegacion-principal {
+    background-color: var(--secundario);
 }
